--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-
+body{
+    margin: 0;
+}
+/* @media screen and (min-width:400px) {
+    img {width: 100%;}
+}
+@media screen and  (width > 400px) {
+    img{ width:50%}
+} */
 .img {
-
 position: relative;
-
 }
 
 .hover_img,.text2 {
@@ -13,6 +19,7 @@ position: relative;
     }
 
     .img:hover .hover_img {
+        filter: invert(100%);
         display: inline;
         
         }
@@ -28,7 +35,7 @@ position: relative;
             left: 270px;
     }
 .text2 {
-            color: black;
+            color: rgb(230, 206, 206);
             font-size: 20px;
             font-weight: bold;
             position:absolute;
